[package]
name = "autotiler_32px"
version = "0.2.0"
authors = ["Giuliano"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
lazy_static = "*"
serde = { version = "*", features = [ "derive" ] }
serde_jsonrc = "*"
serde_with = "*"
uuid = { version = "*", features = [ "serde", "v4"] }
tinyfiledialogs = "*"
anyhow = "*"